[package]
name = "hacker-website"
version = "0.1.0"
authors = ["elsehow <yes@cosmopol.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"